# sportypy

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
src/sportypy/: __init__.py
src/sportypy/causal/: __init__.py
src/sportypy/data/: __init__.py  frames.py
src/sportypy/predict/: __init__.py
src/sportypy/projections/: __init__.py
src/sportypy/spatial/: __init__.py
src/sportypy/value_attribution/: __init__.py
tests/: __init__.py  test_import.py
