[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportypy"
version = "0.1.0"
description = "A Python library for sports analytics with probabilistic modeling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SportyPy Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "narwhals>=1.0",
    "polars>=1.0",
    "pymc>=5.0",
    "arviz>=0.15",
    "scikit-learn>=1.3",
    "xarray>=2023.1",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/sportypy/sportypy"
Documentation = "https://sportypy.readthedocs.io"
Repository = "https://github.com/sportypy/sportypy"

[tool.hatch.build.targets.wheel]
packages = ["src/sportypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=sportypy --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
